# hggd_ros2

HGGD/: demo.py  demo.sh  pred_grasp.py  pred_grasp.sh
docker/: compose.yml
grasp_pose_detection/: CMakeLists.txt  package.xml  setup.py
grasp_pose_detection/grasp_pose_detection/: test.py
grasp_pose_detection/srv/: GetBestGrasp.srv
