<?xml version="1.0"?>
<package format="3">
  <name>grasp_pose_detection</name>
  <version>0.0.1</version>
  <description>HGGD grasp service wrapper</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- for custom service -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

